Fix Post Overflow by 1.15em

--- a/style.css
+++ b/style.css
@@ -7686,7 +7686,7 @@ a {
 
 .post,
 .page {
-  margin: 0 0 1.5em; }
+  margin: 0 0 0; }
 
 .updated:not(.published) {
   display: none; }
